--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "pthread.h": "c",
-        "21CS02006_A2.C": "cpp"
+        "21CS02006_A2.C": "cpp",
+        "string.h": "c",
+        "limits.h": "c"
     }
 }
