--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "pthread.h": "c",
         "21CS02006_A2.C": "cpp",
         "string.h": "c",
-        "limits.h": "c"
+        "limits.h": "c",
+        "random": "c"
     }
 }
